--- a/index.html
+++ b/index.html
@@ -247,11 +247,22 @@
             </div>
             <label class="row" style="gap:8px">
               <input id="useApi" type="checkbox"/>
-              <span class="small">Bruk API</span>
+              <span class="small">Bruk live AI</span>
             </label>
           </div>
           <div class="small muted" style="margin-top:8px">
-            Krever at du kjører <code>server.py</code> og har <code>OPENAI_API_KEY</code> satt i miljøet.
+            På GitHub Pages kan vi ikke bruke API-nøkkel i nettleseren.
+          </div>
+          <div class="row" style="margin-top:10px; align-items:center">
+            <label class="small muted" for="apiBase" style="min-width:120px">Backend URL</label>
+            <input id="apiBase" class="input" style="max-width:520px" placeholder="https://din-backend.example.com" />
+            <button class="btn" id="saveApiBase" type="button">Lagre</button>
+            <button class="btn" id="testApi" type="button">Test</button>
+          </div>
+          <div class="small muted" style="margin-top:8px">
+            Backend må tilby <code>POST /api/assist</code> og (valgfritt) <code>GET /api/ping</code>. Tips: du kan også åpne siden med <code>?backend=https://din-worker</code>.
+          </div>
+          <div class="small muted" style="margin-top:8px"> Legg inn en backend-endepunkt URL (f.eks. Cloudflare Worker/Netlify Function) hvis du vil ha live AI.
           </div>
         </div>
 
@@ -324,6 +335,46 @@
   const KEY = "comma.agreements.v1";
   const CHATKEY = "comma.chat.v1";
 
+
+  const APIBASEKEY = "comma.apiBase.v1";
+  function getApiBase(){
+    try{ return (localStorage.getItem(APIBASEKEY) || "").trim(); }catch{ return ""; }
+  }
+  function setApiBase(v){
+    try{ localStorage.setItem(APIBASEKEY, (v||"").trim()); }catch{}
+
+function normalizeBase(url){
+  return (url || "").trim().replace(/\/+$/,"");
+}
+
+function guessBackendUrl(){
+  // Priority:
+  // 1) ?backend=https://...
+  // 2) stored value
+  // 3) nothing (require user to set Worker URL)
+  try{
+    const u = new URL(location.href);
+    const q = u.searchParams.get("backend");
+    if(q) return normalizeBase(q);
+  }catch{}
+  return normalizeBase(getApiBase());
+}
+
+async function pingApi(base){
+  const b = normalizeBase(base);
+  if(!b) return { ok:false, error:"Mangler backend URL" };
+  try{
+    const r = await fetch(b + "/api/ping", { method:"GET" });
+    if(!r.ok) return { ok:false, error: "Ping feilet: " + r.status };
+    const j = await r.json().catch(()=> ({}));
+    return { ok:true, data:j };
+  }catch(e){
+    return { ok:false, error: String(e?.message || e) };
+  }
+}
+  }
+
+
   function uid(){ return Math.random().toString(16).slice(2) + Date.now().toString(16); }
   function load(key, fallback){
     try{ const raw = localStorage.getItem(key); return raw ? JSON.parse(raw) : fallback; }
@@ -370,7 +421,9 @@
   // If API mode is on, call local proxy: POST /api/assist
   if(useApi){
     try{
-      const r = await fetch("/api/assist", {
+      const base = guessBackendUrl();
+          if(!base) throw new Error("Mangler backend URL (trykk Lagre).");
+          const r = await fetch(base.replace(/\/$/,"") + "/api/assist", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify({ mode, who, text })
@@ -455,240 +508,3 @@
         const chat = load(CHATKEY, []);
         chat.push({ id: uid(), who: "assistant", text: s.text, ts: Date.now() });
         save(CHATKEY, chat);
-        toast("Lagt i chat");
-        const chatEl = document.querySelector("#chat");
-        if(chatEl) renderChat(chatEl, chat);
-      });
-      card.querySelector('[data-act="save"]').addEventListener("click", ()=>{
-        const items = load(KEY, []);
-        const a = {
-          id: uid(),
-          title: s.title || "Kommaregel",
-          rule: s.commarule || s.text,
-          details: s.agreement,
-          createdAt: Date.now(),
-          status: "draft"
-        };
-        items.unshift(a);
-        save(KEY, items);
-        toast("Lagret som avtale");
-      });
-      wrap.appendChild(card);
-    }
-    host.appendChild(wrap);
-  }
-
-  function initHelper(){
-    const chatEl = document.querySelector("#chat");
-    const modeEl = document.querySelector("#mode");
-    const whoMe = document.querySelector("#whoMe");
-    const whoThem = document.querySelector("#whoThem");
-    const draftEl = document.querySelector("#draft");
-    const sendBtn = document.querySelector("#send");
-    const suggEl = document.querySelector("#suggestions");
-    const summaryEl = document.querySelector("#summary");
-    if(!chatEl) return;
-
-    let chat = load(CHATKEY, []);
-    if(chat.length === 0){
-      chat = [{ id: uid(), who: "assistant", text: "Lim inn én setning. Velg modus. Jeg lager forslag du kan stå i (simulert).", ts: Date.now() }];
-      save(CHATKEY, chat);
-    }
-    renderChat(chatEl, chat);
-
-    let who = "me";
-    function setWho(v){
-      who = v;
-      whoMe.classList.toggle("primary", who === "me");
-      whoThem.classList.toggle("primary", who === "them");
-      whoMe.classList.toggle("btn", true);
-      whoThem.classList.toggle("btn", true);
-      whoMe.classList.toggle("primary", who === "me");
-      whoThem.classList.toggle("primary", who === "them");
-      // keep style by toggling classes; classList doesn't remove other needed classes
-      if(who === "me"){ whoMe.classList.add("primary"); whoThem.classList.remove("primary"); }
-      else { whoThem.classList.add("primary"); whoMe.classList.remove("primary"); }
-    }
-    whoMe.addEventListener("click", ()=> setWho("me"));
-    whoThem.addEventListener("click", ()=> setWho("them"));
-    setWho("me");
-
-    async function doSuggest(){
-      const text = sanitize(draftEl.value);
-      if(!text) return;
-      chat = load(CHATKEY, []);
-      chat.push({ id: uid(), who, text, ts: Date.now() });
-      save(CHATKEY, chat);
-      renderChat(chatEl, chat);
-      draftEl.value = "";
-
-      const mode = modeEl.value;
-      const last = await makeSuggestions(mode, who, text);
-      summaryEl.textContent = last.summary;
-      renderSuggestions(suggEl, last && last.suggestions && last.suggestions.length ? last : null);
-      if(last && last.warnings && last.warnings.length){ toast(last.warnings[0]); }
-    }
-
-    sendBtn.addEventListener("click", doSuggest);
-    draftEl.addEventListener("keydown", (e)=>{
-      if((e.ctrlKey || e.metaKey) && e.key === "Enter"){ doSuggest(); }
-    });
-
-    summaryEl.textContent = "Send en setning for å se forslag.";
-    renderSuggestions(suggEl, null);
-  }
-
-  function renderAgreementCard(a){
-    const stamp = new Date(a.createdAt).toLocaleString("no-NO");
-    const el = document.createElement("div");
-    el.className = "card";
-    el.style.padding = "14px";
-
-    const d = a.details || {};
-    el.innerHTML = `
-      <div class="row" style="justify-content:space-between">
-        <div>
-          <div class="pill" style="gap:10px">
-            <span>${String(a.status).toUpperCase()}</span>
-            <span class="muted small">${stamp}</span>
-          </div>
-          <h3 class="h2" style="margin-top:10px">${a.title}</h3>
-        </div>
-        <div class="row" style="justify-content:flex-end">
-          <button class="btn" data-act="copy">Kopier</button>
-          <button class="btn" data-act="del">Slett</button>
-        </div>
-      </div>
-      <hr class="sep"/>
-      <span class="tag">Kommaregel</span>
-      <p style="margin-top:8px;white-space:pre-wrap">${a.rule}</p>
-      ${a.details ? `
-        <div class="small">
-          ${d.do ? `<p><strong>Vi gjør:</strong> ${d.do}</p>` : ""}
-          ${d.when ? `<p><strong>Når:</strong> ${d.when}</p>` : ""}
-          ${d.exceptions ? `<p><strong>Unntak:</strong> ${d.exceptions}</p>` : ""}
-          ${d.repair ? `<p><strong>Reparasjon:</strong> ${d.repair}</p>` : ""}
-          ${d.check_in ? `<p><strong>Sjekk inn:</strong> ${d.check_in}</p>` : ""}
-        </div>
-      ` : ""}
-      <hr class="sep"/>
-      <div class="row">
-        <span class="small muted">Status:</span>
-        <button class="btn ${a.status==="draft"?"primary":""}" data-act="draft">Utkast</button>
-        <button class="btn ${a.status==="active"?"primary":""}" data-act="active">Aktiv</button>
-        <button class="btn ${a.status==="archived"?"primary":""}" data-act="archived">Arkiv</button>
-      </div>
-    `;
-
-    el.querySelector('[data-act="copy"]').addEventListener("click", async ()=>{
-      const lines = [a.title, "", "Kommaregel:", a.rule];
-      if(a.details){
-        if(d.do) lines.push(`\nVi gjør: ${d.do}`);
-        if(d.when) lines.push(`Når: ${d.when}`);
-        if(d.exceptions) lines.push(`Unntak: ${d.exceptions}`);
-        if(d.repair) lines.push(`Reparasjon: ${d.repair}`);
-        if(d.check_in) lines.push(`Sjekk inn: ${d.check_in}`);
-      }
-      try{ await navigator.clipboard.writeText(lines.join("\n")); toast("Kopiert"); }
-      catch{ toast("Kopier feilet (OK)"); }
-    });
-
-    el.querySelector('[data-act="del"]').addEventListener("click", ()=>{
-      let items = load(KEY, []);
-      items = items.filter(x => x.id !== a.id);
-      save(KEY, items);
-      toast("Slettet");
-      initAgreements();
-    });
-
-    ["draft","active","archived"].forEach(st=>{
-      el.querySelector(`[data-act="${st}"]`).addEventListener("click", ()=>{
-        let items = load(KEY, []);
-        items = items.map(x => x.id === a.id ? { ...x, status: st } : x);
-        save(KEY, items);
-        toast("Oppdatert");
-        initAgreements();
-      });
-    });
-    return el;
-  }
-
-  function initAgreements(){
-    const host = document.querySelector("#agreements");
-    const exportBtn = document.querySelector("#exportJson");
-    if(!host) return;
-    host.innerHTML = "";
-
-    const items = load(KEY, []);
-    if(exportBtn){
-      exportBtn.disabled = items.length === 0;
-      exportBtn.onclick = ()=>{
-        const blob = new Blob([JSON.stringify(items, null, 2)], { type: "application/json" });
-        const url = URL.createObjectURL(blob);
-        const a = document.createElement("a");
-        a.href = url;
-        a.download = "comma_avtaler.json";
-        a.click();
-        URL.revokeObjectURL(url);
-      };
-    }
-
-    const groups = {
-      active: items.filter(i=>i.status==="active"),
-      draft: items.filter(i=>i.status==="draft"),
-      archived: items.filter(i=>i.status==="archived")
-    };
-
-    for(const [k, list] of Object.entries(groups)){
-      const sec = document.createElement("section");
-      sec.style.marginTop = "18px";
-      sec.innerHTML = `<div class="row" style="justify-content:space-between">
-        <h2 class="h2">${k === "active" ? "Aktive" : k==="draft" ? "Utkast" : "Arkiv"} (${list.length})</h2>
-      </div>`;
-      const grid = document.createElement("div");
-      grid.className = "grid";
-      grid.style.marginTop = "12px";
-
-      if(list.length === 0){
-        const empty = document.createElement("div");
-        empty.className = "card";
-        empty.style.padding = "14px";
-        empty.innerHTML = `<div class="muted small">Tomt. Lag en avtale fra Hjelperen.</div>`;
-        grid.appendChild(empty);
-      } else {
-        for(const a of list){
-          grid.appendChild(renderAgreementCard(a));
-        }
-      }
-      sec.appendChild(grid);
-      host.appendChild(sec);
-    }
-  }
-
-  // Simple hash router so internal links never break
-  function setRoute(hash){
-    const h = (hash || "#home").replace("#","");
-    const views = {
-      home: document.querySelector("#viewHome"),
-      helper: document.querySelector("#viewHelper"),
-      agreements: document.querySelector("#viewAgreements")
-    };
-    for(const [k, el] of Object.entries(views)){
-      if(!el) continue;
-      el.classList.toggle("active", k === h);
-    }
-    document.querySelector("#navHome")?.classList.toggle("active", h === "home");
-    document.querySelector("#navHelper")?.classList.toggle("active", h === "helper");
-    document.querySelector("#navAgreements")?.classList.toggle("active", h === "agreements");
-
-    if(h === "helper"){ initHelper(); }
-    if(h === "agreements"){ initAgreements(); }
-  }
-
-  window.addEventListener("hashchange", ()=> setRoute(location.hash));
-  document.addEventListener("DOMContentLoaded", ()=>{
-    setRoute(location.hash || "#home");
-  });
-</script>
-</body>
-</html>
